@@ -215,6 +215,11 @@
          warming. -->
     <useColdSearcher>false</useColdSearcher>
 
+    <!-- Maximum number of searchers that may be warming in the background
+      concurrently.  An error is returned if this limit is exceeded. Recommend
+      1-2 for read-only slaves, higher for masters w/o cache warming. -->
+    <maxWarmingSearchers>4</maxWarmingSearchers>
+
   </query>
 
 
